# mzpricer

./: .gitignore  README.md  _lib.rs
_python/: demo.py  option_pricer.c  option_pricer.pyx  pricer.py  speed_test.py
mzpricer-core/: Cargo.toml
mzpricer-core/src/: lib.rs  pricer.rs
mzpricer-core/tests/: pricer_tests.rs
mzpricer-py/: Cargo.toml  pyproject.toml  setup.py
mzpricer-py/mzpricer/: __init__.py
mzpricer-py/src/: lib.rs
mzpricer-py/tests/: test_python_api.py
